--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
 						<div class="row 150%">
 							<div class="6u 12u$(xsmall)">
 								<div class="image fit captioned">
-									<img src="images/pic02.jpg" alt="" />
+									<img src="images/pic02.jpg" alt="Programador php" />
 									<h3>Website desenvolvido com WordPress</h3>
 								</div>
 							</div>
 							<div class="6u$ 12u$(xsmall)">
 								<div class="image fit captioned">
-									<img src="images/pic03.jpg" alt="" />
+									<img src="images/pic03.jpg" alt="Programador php" />
 									<h3>Website desenvolvido com Laravel e voyager cms</h3>
 								</div>
 							</div>
@@ -91,7 +91,7 @@
 						</header>
 						<div class="feature-grid">
 							<div class="feature">
-								<div class="image rounded"><img src="images/code.jpg" alt="" /></div>
+								<div class="image rounded"><img src="images/code.jpg" alt="Programador php" /></div>
 								<div class="content">
 									<header>
 										<h4>Desenvolvedor Front-End</h4>
@@ -101,7 +101,7 @@
 								</div>
 							</div>
 							<div class="feature">
-								<div class="image rounded"><img src="images/wp.jpg" alt="" /></div>
+								<div class="image rounded"><img src="images/wp.jpg" alt="Programador php" /></div>
 								<div class="content">
 									<header>
 										<h4>WordPress / Blog</h4>
@@ -111,7 +111,7 @@
 								</div>
 							</div>
 							<div class="feature">
-								<div class="image rounded"><img src="images/cart.jpg" alt="" /></div>
+								<div class="image rounded"><img src="images/cart.jpg" alt="Programador php" /></div>
 								<div class="content">
 									<header>
 										<h4>Loja Virtual / E-commerce</h4>
@@ -123,7 +123,7 @@
 								</div>
 							</div>
 							<div class="feature">
-								<div class="image rounded"><img src="images/php.jpg" alt="" /></div>
+								<div class="image rounded"><img src="images/php.jpg" alt="Programador php" /></div>
 								<div class="content">
 									<header>
 										<h4>Programador php</h4>
