--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="pt-br">
 	<head>
 		<title>Desenvolvedor Web Freelancer Programador PHP</title>
 		<meta charset="utf-8" />
+		<meta http-equiv="Content-Language" content="pt-br">
+
 		<meta name="robots" content="index, follow"> 
 		<meta name="description" content="Desenvolvedor Web, Programador PHP - Freelancer, Criação de Sites e Lojas Virtuais, Wordpress, Responsive Design, Programador Front End e laravel" /> 
 
