--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 		<meta name="keywords" content="programador php remoto, woocommerce, wordpress, programador, programador php, programador wordpress, programador freelancer, programador php freelancer"/>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		
+
+		<link  rel="stylesheet"  href="assets/css/main.css"  media="print" onload="this.media='all'"/>
 
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
