--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
 			</footer>
 
 		<!-- Scripts -->
-			<script async="true" src="assets/js/jquery.min.js"></script>
-			<script async="true" src="assets/js/skel.min.js"></script>
-			<script async="true" src="assets/js/util.js"></script>
-			<script async="true" src="assets/js/main.js"></script> 
+			<script async src="assets/js/jquery.min.js"></script>
+			<script async src="assets/js/skel.min.js"></script>
+			<script async src="assets/js/util.js"></script>
+			<script async src="assets/js/main.js"></script> 
 			
 	
 
