--- a/index.html
+++ b/index.html
@@ -200,10 +200,22 @@
 			</footer>
 
 		<!-- Scripts -->
-			<script  src="assets/js/jquery.min.js"></script>
+
+		<script>
+			(function() {
+				var po = document.createElement('script'); 
+				po.type = 'text/javascript'; 
+				po.async = true;
+				po.src = 'assets/js/jquery.min.js';
+				var s = document.getElementsByTagName('script')[0]; 
+				s.parentNode.insertBefore(po, s);
+			})();
+		</script>
+
+		<!--	<script  src="assets/js/jquery.min.js"></script>
 			<script  src="assets/js/skel.min.js"></script>
 			<script  src="assets/js/util.js"></script>
-			<script  src="assets/js/main.js"></script> 
+			<script  src="assets/js/main.js"></script> -->
 			
 	
 
