--- a/index.html
+++ b/index.html
@@ -208,14 +208,14 @@
 <div class="nav-bottom">
             <div class="popup-whatsapp fadeIn">
                 <div class="content-whatsapp -top"><button type="button" class="closePopup">
-                      <i class="material-icons icon-font-color">Fechar</i>
+                      <i class="material-icons icon-font-color">close</i>
                     </button>
                     <p>Olá, 😊 como vai?</p>
                 </div>
                 <div class="content-whatsapp -bottom">
                   <input class="whats-input" id="whats-in" type="text" Placeholder="Envie uma mensagem..." />
                     <button class="send-msPopup" id="send-btn" type="button">
-                        <i class="material-icons icon-font-color--black">enviar</i>
+                        <i class="material-icons icon-font-color--black">send</i>
                     </button>
 
                 </div>
