--- a/programador-php.html
+++ b/programador-php.html
@@ -37,7 +37,7 @@
 
 					<header class="major special">
 						<h2>Programador php</h2>
-						<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+						<p>Gosto de desafios e ideias inovadoras, atualmente divido meu tempo entre consultoria e programação e café bem forte, com muita motivação!</p>
 					</header>
 
 					<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
