--- a/wordpress.html
+++ b/wordpress.html
@@ -43,10 +43,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="programador-php.html" title="programador php">Sobre</a></li>
-						<li><a href="programacao-php.html" title="programador php">Serviços</a></li>
-						<li><a href="portifolio.html" title="programador php">Portfólio</a></li>
 						<li><a href="wordpress.html" title="programador wordpress">WordPress</a></li>
-						<li><a href="desenvolvedor-android.html" title="programador android">Aplicativos</a></li>
 						<li><a href="https://api.whatsapp.com/send?phone=5545998003820&text=Oi,%20Joel" target="_blank"><i class="fa fa-whatsapp"></i> Contato</a></li>
 					</ul>
 				</nav>
@@ -86,41 +83,40 @@
 </section>
 
 		<!-- Footer -->
-			<footer id="footer">
-				<div class="container">
-					<ul class="icons">
-						<li><a href="#" class="icon fa-facebook"></a></li>
-						<li><a href="#" class="icon fa-twitter"></a></li>
-						<li><a href="#" class="icon fa-instagram"></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled</li>
-						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
-						<li>Images: <a href="http://unsplash.com">Unsplash</a></li>
-					</ul>
-				</div>
+        <footer id="footer">
+			<div class="container">
+				<ul class="icons">
+					<li><a href="https://www.linkedin.com/in/joel-machado/" target="_blank" class="icon fa-linkedin"></a></li>
+					<li><a href="https://api.whatsapp.com/send?phone=5545998003820&text=Oi,%20Joel" target="_blank" class="icon fa-whatsapp"></a></li>
+				</ul>
 
-				<div class="nav-bottom">
-					<div class="popup-whatsapp fadeIn">
-						<div class="content-whatsapp -top"><button type="button" class="closePopup">
-							  <i class="material-icons icon-font-color">close</i>
-							</button>
-							<p>Olá, 😊 como vai?</p>
-						</div>
-						<div class="content-whatsapp -bottom">
-						  <input class="whats-input" id="whats-in" type="text" Placeholder="Envie uma mensagem..." />
-							<button class="send-msPopup" id="send-btn" type="button">
-								<i class="material-icons icon-font-color--black">send</i>
-							</button>
-		
-						</div>
-					</div>
-					<button type="button" id="whats-openPopup" class="whatsapp-button">
-						<img class="icon-whatsapp" src="https://image.flaticon.com/icons/svg/134/134937.svg">
+				<ul class="copyright">
+					<li>joel.machado5@gmail.com</li>
+				</ul>
+				
+			</div>
+		</footer>
+
+		<div class="nav-bottom">
+			<div class="popup-whatsapp fadeIn">
+				<div class="content-whatsapp -top"><button type="button" class="closePopup">
+					  <i class="material-icons icon-font-color">close</i>
 					</button>
-					<div class="circle-anime"></div>
+					<p>Olá, 😊 como vai?</p>
 				</div>
-			</footer>
+				<div class="content-whatsapp -bottom">
+				  <input class="whats-input" id="whats-in" type="text" Placeholder="Envie uma mensagem..." />
+					<button class="send-msPopup" id="send-btn" type="button">
+						<i class="material-icons icon-font-color--black">send</i>
+					</button>
+
+				</div>
+			</div>
+			<button type="button" id="whats-openPopup" class="whatsapp-button">
+				<img class="icon-whatsapp" src="https://image.flaticon.com/icons/svg/134/134937.svg">
+			</button>
+			<div class="circle-anime"></div>
+		</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
