--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 							<h2>Que atribuições um programador php deve ter?</h2>	
 							<p>É bastante importante para o programador PHP o constante acompanhamento do desenvolvimento da linguagem, que se atualiza constantemente. Novas funcionalidades e possibilidades de integração com outros sistemas surgem à medida que a linguagem evolui.</p>	
 							<p>Quando a área envolve programação, é imprescindível que o profissional tenha em mente que seus códigos devem ser escritos de uma forma clara e legível, de forma que bugs possam ser corrigidos por outros colegas e implementações de novas funcionalidades não se tornem uma tarefa difícil. Programar em PHP não é somente escrever códigos para executar suas funcionalidades, o desenvolvimento é constante e a organização é um fator muito importante.</p>
-							<h2>Como é o mercado de trabalho?</h2>	
+							<h2>Quem utiliza a linguagem php?</h2>	
 							<p>Nos dias de hoje, quase toda empresa necessita de um site e a maioria possui, de alguma forma, uma integração com essa linguagem. O aumento no acesso à internet fez crescer o mercado de empresas de Tecnologia da Informação, e elas lidam diretamente com bancos de dados e servidores que tem o PHP como sua principal linguagem de programação.</p>
 							<p>Além disso, é cada vez mais comum a realização de operações bancárias e transações comerciais on-line, e sendo o PHP parte integrante dessas aplicações devido à sua segurança, seu uso tende a crescer em conjunto.</p>
 
