--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 										<h4>WordPress / Blog</h4>
 										<p>Desenvolvimento de plugins e themes</p>
 									</header>
-									<p>Especialista WordPress e Programador PHP, criação de Blogs e Plugins.</p>
+									<p>Especialista <a href="wordpress.html" alt="programador php">WordPress</a> e Programador PHP, criação de Blogs e Plugins.</p>
 								</div>
 							</div>
 							<div class="feature">
@@ -218,7 +218,7 @@
 							<p>A interação promovida pelo PHP é processada dentro do servidor, e não na máquina do usuário, retornando apenas os resultados para o navegador. Isso torna a linguagem bastante veloz e segura para lidar com dados confidenciais, como senhas e ou números de cartão de crédito.</p>	
 							<p>A estabilidade, segurança e velocidade do PHP o tornam bastante atrativo para a maior parte das aplicações web. E a crescente expansão do comércio on-line traz ainda mais oportunidades para o profissional que sabe lidar com essa linguagem.</p>	
 							<h2>O que um programador PHP faz?</h2>
-							<p>O programador PHP é responsável pelo desenvolvimento de programas que utilizam banco de dados e procuram uma interação com o usuário. Geralmente estes programas estão por trás de sites e servidores da web.</p>	
+							<p>O <a href="programador-php.html" alt="programador php">programador PHP</a> é responsável pelo desenvolvimento de programas que utilizam banco de dados e procuram uma interação com o usuário. Geralmente estes programas estão por trás de sites e servidores da web.</p>	
 							<p>Além do desenvolvimento, o profissional também realiza manutenções em sistemas já existentes, resolvendo bugs, implementando novas funcionalidades e otimizando o desempenho de servidores.</p>	
 							<p>O profissional que conhece a linguagem PHP é capaz de lidar com uma grande gama de bancos de dados e pode programar para múltiplos sistemas operacionais, trazendo uma vantagem competitiva substancial no mercado de trabalho.</p>
 							<h2>Que atribuições um programador php deve ter?</h2>	
