--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
 						<div class="row 200%">
 							<div class="6u 12u$(medium)">
 								<header class="major">
-									<h2>Desenvolvedor Web Freelancer Programador PHP e WordPress</h2>
+									<h2>Desenvolvedor Web Freelancer Programador php e WordPress</h2>
 									<p>DESENVOLVIMENTO DE WEBSITES, SISTEMAS, <br />E-COMMERCE E APPS</p>
 								</header>
 							</div>
 							<div class="6u$ 12u$(medium)">
-								<p>Sou desenvolvedor web freelancer, programador PHP e WordPress. Resido em Foz do Iguaçu, PR. Tenho mais de 12 anos de experiência em programação para web e tenho sólidos conhecimentos em: </p>
+								<p>Sou desenvolvedor web freelancer, <a href="programador-php.html" alt="programador php">programador php</a> e WordPress. Resido em Foz do Iguaçu, PR. Tenho mais de 12 anos de experiência em programação para web e tenho sólidos conhecimentos em: </p>
 								<p>WordPress, CodeIgniter, CakePhp, Laravel, Css3, Html5, Php7, Mysql, Git, React Js, Ionic, Java FX e Linux.</p>
 								<p>Comprometimento com a data de entrega evitando que seu negócio fique prejudicado devido a atrasos no desenvolvimento do seu projeto.</p>
 								<p>Gosto de desafios e ideias inovadoras, atualmente divido meu tempo entre consultoria, construção de negócios, programação e um café bem forte, com muita motivação.</p>
