--- a/contato.html
+++ b/contato.html
@@ -59,7 +59,11 @@
 					</ul>
 				</div>
 			</footer>
-
+	<div class="nav-bottom">
+				<a id="whats-openPopup" class="whatsapp-button" href="https://api.whatsapp.com/send?phone=5545998003820" target="_blank">
+					<img class="icon-whatsapp" src="images/whatsappbt.png">
+				</a>
+			</div>
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
