--- a/sobre.html
+++ b/sobre.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Spatial by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
 <html>
 	<head>
 		<title>Joel Machado, programador php freelancer </title>
@@ -65,26 +60,11 @@
 					</ul>
 				</div>
 
-				<div class="nav-bottom">
-					<div class="popup-whatsapp fadeIn">
-						<div class="content-whatsapp -top"><button type="button" class="closePopup">
-							  <i class="material-icons icon-font-color">close</i>
-							</button>
-							<p>Olá, 😊 como vai?</p>
-						</div>
-						<div class="content-whatsapp -bottom">
-						  <input class="whats-input" id="whats-in" type="text" Placeholder="Envie uma mensagem..." />
-							<button class="send-msPopup" id="send-btn" type="button">
-								<i class="material-icons icon-font-color--black">send</i>
-							</button>
-		
-						</div>
-					</div>
-					<button type="button" id="whats-openPopup" class="whatsapp-button">
-						<img class="icon-whatsapp" src="https://image.flaticon.com/icons/svg/134/134937.svg">
-					</button>
-					<div class="circle-anime"></div>
-				</div>
+			<div class="nav-bottom">
+				<a id="whats-openPopup" class="whatsapp-button" href="https://api.whatsapp.com/send?phone=5545998003820" target="_blank">
+					<img class="icon-whatsapp" src="images/whatsappbt.png">
+				</a>
+			</div>
 			</footer>
 
 		<!-- Scripts -->
