--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
 		gtag('config', 'AW-861721838');
 		</script>
+		<meta name="msvalidate.01" content="0DFB2855ECD4922F90F08C72C3C7528E" />
 
 		<!-- Event snippet for Contato conversion page
 		In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
@@ -77,7 +78,11 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="programador-php.html" title="programador php">Sobre</a></li>
 						<li><a href="wordpress.html" title="programador wordpress">WordPress</a></li>
-						<li><a href="https://api.whatsapp.com/send?phone=5545998003820&text=Oi,%20Joel" target="_blank"><i class="fa fa-whatsapp"></i> Contato</a></li>
+						<li>
+						   <a href="https://api.whatsapp.com/send?phone=5545998003820&text=" 
+						        target="_blank"><i class="fa fa-whatsapp"></i> Contato
+						    </a>
+						   </li>
 					</ul>
 				</nav>
 			</header>
@@ -89,7 +94,7 @@
 				<h2>Desenvolvedor Web <br />Programador PHP Freelancer</h2>
 				<p>WordPress, CodeIgniter, CakePhp, Laravel, Css3, Html5, Php7, Mysql e Linux. <br /></p>
 				<ul class="actions">
-					<li><a href="https://api.whatsapp.com/send?phone=5545998003820&text=Oi,%20Joel" target="_blank" class="button special big"><i class="fa fa-whatsapp"></i> Contato</a></li>
+					<li><a href="https://api.whatsapp.com/send?phone=5545998003820&text=" target="_blank" class="button special big"><i class="fa fa-whatsapp"></i> Contato</a></li>
 				</ul>
 			</section>
 
@@ -248,39 +253,16 @@
 			</footer>
 
 		<!-- Scripts -->
+			<div class="nav-bottom">
+				<a id="whats-openPopup" class="whatsapp-button" href="https://api.whatsapp.com/send?phone=5545998003820" target="_blank">
+					<img class="icon-whatsapp" src="images/whatsappbt.png">
+				</a>
+			</div>
 
-
-
-
-<div class="nav-bottom">
-            <div class="popup-whatsapp fadeIn">
-                <div class="content-whatsapp -top"><button type="button" class="closePopup">
-                      <i class="material-icons icon-font-color">close</i>
-                    </button>
-                    <p>Olá, 😊 como vai?</p>
-                </div>
-                <div class="content-whatsapp -bottom">
-                  <input class="whats-input" id="whats-in" type="text" Placeholder="Envie uma mensagem..." />
-                    <button class="send-msPopup" id="send-btn" type="button">
-                        <i class="material-icons icon-font-color--black">send</i>
-                    </button>
-
-                </div>
-            </div>
-            <button type="button" id="whats-openPopup" class="whatsapp-button">
-                <img class="icon-whatsapp" src="https://image.flaticon.com/icons/svg/134/134937.svg">
-            </button>
-            <div class="circle-anime"></div>
-		</div>
-		
-
-		
 			<script  src="assets/js/jquery.min.js"></script>
 			<script  src="assets/js/skel.min.js"></script>
 			<script  src="assets/js/util.js"></script>
 			<script  src="assets/js/main.js"></script> 
 			
-	
-
 	</body>
 </html>
